--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,8 +13,8 @@
           <div class="container">
             <div class="carousel-caption">
 
-              <p>Nobody ever becomes an expert parent. But I think good parenting is about consistency. It's about being there at big moments, but it's also just the consistency of decision making. And it's routine. <strong>Sebastian Coe</strong></p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p style="color: black;">Nobody ever becomes an expert parent. But I think good parenting is about consistency. It's about being there at big moments, but it's also just the consistency of decision making. And it's routine. <strong>Sebastian Coe</strong></p>
+
             </div>
           </div>
         </div>
@@ -22,9 +22,9 @@
           <img class="second-slide" src="<%= asset_path( 'topscreen2.png' ) %>" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h2 style="color: black;">Toddlers</h2>
+              <p style="color: black;">The craziest, messiest, most infuriating, emotionally unstable, unreasonable, frustrating, tiring people you couldn't imagine your life without.</p>
+
             </div>
           </div>
         </div>
@@ -32,9 +32,8 @@
           <img class="third-slide" src="<%= asset_path( 'topscreen3.png' ) %>" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p style="color: black;">Parents are the ultimate role models for children. Every word, movement and action has an effect. No other person or outside force has a greater influence on a child than the parent.</p>
+
             </div>
           </div>
         </div>
@@ -58,25 +57,22 @@
           <div class="col-lg-4">
             <img class="link-img" src="<%= asset_path( 'blog.png' ) %>" alt="Generic placeholder image" width="140" height="140">
             <h2><%= link_to 'Blog time', blogs_path %></h2>
-            <p>"If you can learn something new every day, you can teach something new every day." Martha Stewart</p>
+
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="link-img" src="<%= asset_path( 'cook.png' ) %>" alt="Generic placeholder image" width="140" height="140">
             <h2><%= link_to 'Share your recipes', recipes_path %></h2>
-            <p>“For each new morning with its light, For rest and shelter of the night,
-                For health and food, for love and friends, For everything Thy goodness sends.”
 
-                ~ Ralph Waldo Emerson</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="link-img" src="<%= asset_path( 'video.jpg' ) %>" alt="Generic placeholder image" width="140" height="140">
             <h2><%= link_to 'Videos for Babies', videos_path %></h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="link-img" src="<%= asset_path ('shopping2.jpg') %>" alt="Generic placeholder image" width="140" height="140">
                 <h2><%= link_to 'Shopping', shoppings_path %></h2>
-            <p>Shopping Rule #1 : GRAB IT NOW! Tomorrow it might be gone forever.</p>
+
           </div><!-- /.col-lg-4 -->
 
 
@@ -89,7 +85,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">6 Things You May Not Know Your Baby Can Do. <span class="text-muted"><%= link_to 'Read all...', welcome_babies_path  %></span></h2>
+          <h3 class="featurette-heading">6 Things You May Not Know Your Baby Can Do. <span class="text-muted"><%= link_to 'Read all...', welcome_babies_path  %></span></h3>
           <p class="lead">We bet you had no idea how much your baby could do until now! Read on to find out why you're really living with a Superbaby!</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -101,7 +97,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Age-by-age guide to feeding your toddler.<span class="text-muted"><%= link_to 'Read all...', welcome_toddler_path  %></span></h2>
+          <h3 class="featurette-heading">Age-by-age guide to feeding your toddler.<span class="text-muted"><%= link_to 'Read all...', welcome_toddler_path  %></span></h3>
           <p class="lead">Use this guide to find out what and how much to feed your child from months 12 to 36. Don't worry if your child eats more or less than the amounts suggested – they're meant as general guidelines.</p>
         </div>
         <div class="col-md-5">
@@ -114,7 +110,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Fun activities to promote speaking skills for your preschooler.<span class="text-muted"><%= link_to 'Read all...', welcome_preschooler_path  %></span></h2>
+          <h3 class="featurette-heading">Fun activities to promote speaking skills for your preschooler.<span class="text-muted"><%= link_to 'Read all...', welcome_preschooler_path  %></span></h3>
           <p class="lead">Do you sometimes have trouble understanding what your preschooler says? You can help her hone her speaking skills by becoming an active listener.</p>
         </div>
         <div class="col-md-5">
