--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,11 +12,19 @@ body {
   padding-top: 70px;
   padding-bottom: 40px;
   color: #5a5a5a;
+
   // background: blue; /* For browsers that do not support gradients */
   // background: -webkit-linear-gradient(blue, lightblue, blue); /* For Safari 5.1 to 6.0 */
   // background: -o-linear-gradient(blue, lightblue, blue); /* For Opera 11.1 to 12.0 */
   // background: -moz-linear-gradient(blue, lightblue, blue); /* For Firefox 3.6 to 15 */
   // background: linear-gradient(blue, lightblue, blue); /* Standard syntax */
+}
+p {
+  font-size: 20px;
+  font-family: 'Kurale', serif;
+}
+h1, h2, h3, h4,{
+  font-family: 'Kavoon', cursive;
 }
 
 .logo {
@@ -41,6 +49,7 @@ hr{
 
 img{
   border: 2px double teal;
+  background-color: white;
 }
 .link-img{
   border-top-left-radius: 50%;
@@ -57,13 +66,17 @@ img{
   margin-bottom: 30px;
 }
 .col-lg-4 {
-  background-color: lightblue;
-  border-bottom: 5px double blue;
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
+  background-image: url('linkmenu.png');
+  background-size: contain;
+  // border-bottom: 5px double blue;
+  border-radius: 20px;
   margin: 5%;
-  width: 90%;
+  width: 300px;
+  height: 300px;
+  padding: 30px;
+  box-shadow: 1px 4px 8px darkred, inset 1px 1px 1px orange;
 }
+
 button {
     color: #19667d;
     background: #70c9e3;
@@ -172,7 +185,7 @@ nav{
 }
 .active {
   margin-top: 30px;
-  margin-left: 20px;
+  margin-left:15px;
 
 }
 
@@ -214,12 +227,14 @@ nav.navbar.navbar-inverse.navbar-static-top {
   left: 0;
   min-width: 100%;
   height: 500px;
+  opacity: 8%;
 }
 .link-menu {
   background-image: url('linkmenuback.jpg');
-  background-size: contain;
+  background-repeat: repeat;
   margin-top: 20px;
   border-radius: 20px;
+  padding-left: 180px;
 }
 
 
