--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -5,35 +5,35 @@
 
   <div class="col-lg-5">
   <iframe width="430" height="250" src="https://www.youtube.com/embed/BEqh-Vw4EP4" frameborder="0" allowfullscreen></iframe>
-  <p>Lullabies for Babies to Go to Sleep | Bedtime Songs | Baby Songs & Lullabies from Dave and Ava</p>
+  <p style="font-size: 15px;">Lullabies for Babies to Go to Sleep | Bedtime Songs | Baby Songs & Lullabies from Dave and Ava</p>
 </div>
 
   <div class="col-lg-5">
   <iframe width="430" height="250" src="https://www.youtube.com/embed/Vu0I_Vu9FQg" frameborder="0" allowfullscreen></iframe>
-  <p>Colors song | nursery rhymes Farmees | learn colors | original song | kids rhymes</p>
+  <p style="font-size: 15px;">Colors song | nursery rhymes Farmees | learn colors | original song | kids rhymes</p>
 </div>
 
 
   <div class="col-lg-5">
     <iframe width="430" height="250" src="https://www.youtube.com/embed/c8XTlVjEteE" frameborder="0" allowfullscreen></iframe>
-    <p>ABC Song | Educational Nursery Rhymes and songs</p>
+    <p style="font-size: 15px;">ABC Song | Educational Nursery Rhymes and songs</p>
   </div>
 
   <div class="col-lg-5">
     <iframe width="430" height="250" src="https://www.youtube.com/embed/npqKNMdQYl4" frameborder="0" allowfullscreen></iframe>
-    <p>20 Pumpkins | Counting Songs | Educational</p>
+    <p style="font-size: 15px;">20 Pumpkins | Counting Songs | Educational</p>
   </div>
 
   <div class="col-lg-5">
     <iframe width="430" height="250" src="https://www.youtube.com/embed/9HS0Qbmq1-k" frameborder="0" allowfullscreen></iframe>
-    <p>Hokey Pokey | nursery rhymes Farmees | children song | 3D rhymes</p>
+    <p style="font-size: 15px;">Hokey Pokey | nursery rhymes Farmees | children song | 3D rhymes</p>
   </div>
 
   <div class="col-lg-5">
     <iframe width="430" height="250" src="https://www.youtube.com/embed/xgwvX9yakqE" frameborder="0" allowfullscreen></iframe>
-    <p>Animals sound song | nursery rhymes farmees | farm song | kids songs | baby rhymes</p>
+    <p style="font-size: 15px;">Animals sound song | nursery rhymes farmees | farm song | kids songs | baby rhymes</p>
   </div>
-  
+
 
 
 </div>
