--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -14,7 +14,7 @@
 
     <p>
       <strong>Image:</strong>
-        <%= image_tag @recipe.image.url%>
+        <%= @recipe.image%>
     </p>
 
     <p>
