--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <hr>
-  
+
   <h3 class="text-center">Contact us</h3>
 
 
@@ -11,7 +11,7 @@
       <p>Drop a note.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span>Maryland, US</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: pradhanmanish33@gmail.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
