--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,42 +14,40 @@
 
   <body>
 
+<header>
+  <div class="navbar-wrapper">
+    <!-- <div class="container"> -->
 
-
-
-      <div class="navbar-wrapper">
+      <nav class="navbar navbar-inverse navbar-static-top">
         <!-- <div class="container"> -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><button type="button" name="button"><%= link_to 'Home', welcome_index_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'About', welcome_about_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'Blogs', blogs_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'Recipe Blogs', recipes_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'videos', videos_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'Shopping', shoppings_path %></button></li>
+              <li class="active"><button type="button" name="button"><%= link_to 'Contact', welcome_contact_path %></button></li>
 
-          <nav class="navbar navbar-inverse navbar-static-top">
-            <!-- <div class="container"> -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">
-              </div>
-              <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li class="active"><button type="button" name="button"><%= link_to 'Home', welcome_index_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'About', welcome_about_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'Blogs', blogs_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'Recipe Blogs', recipes_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'videos', videos_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'Shopping', shoppings_path %></button></li>
-                  <li class="active"><button type="button" name="button"><%= link_to 'Contact', welcome_contact_path %></button></li>
-
-                </ul>
-              </div>
-            <!-- </div> -->
-          </nav>
-
+            </ul>
+          </div>
         <!-- </div> -->
-      </div>
+      </nav>
 
+    <!-- </div> -->
+  </div>
 
+</header>
 
 <section>
   <%= yield %>
@@ -73,7 +71,7 @@
 <a href="http://www.stumbleupon.com/submit?url=SHAREMESSAGE" title="Share on StumbleUpon" target="_blank" data-placement="top" class="btn btn-stumbleupon"><i class="fa fa-stumbleupon"></i> Stumbleupon</a>
 <!-- LinkedIn -->
 <a href="http://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=SHAREMESSAGE" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</a>
-         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 Company, Inc. 
          <p class="pull-right"><a href="#">Back to top</a></p>
 
        </div>
