--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -314,10 +314,13 @@ nav.navbar.navbar-inverse.navbar-static-top {
 -----------------------------------*/
 .footer {
   font-weight: bold;
-  background-color: white;
   height: 170px;
   width: 90%;
   padding: 20px;
   margin-left: 70px;
   border-radius: 20px;
+}
+.share {
+
+  border-bottom: 1px ridge grey;
 }
