--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,17 +61,15 @@
    <div class="container">
      <footer>
        <div class="footer">
-         <!-- Twitter -->
-<a href="http://twitter.com/home?status=SHAREMESSAGE" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i> Twitter</a>
-<!-- Facebook -->
-<a href="https://www.facebook.com/sharer/sharer.php?u=SHAREMESSAGE" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i> Facebook</a>
-<!-- Google+ -->
-<a href="https://plus.google.com/share?url=SHAREMESSAGE" title="Share on Google+" target="_blank" class="btn btn-googleplus"><i class="fa fa-google-plus"></i> Google+</a>
-<!-- StumbleUpon -->
-<a href="http://www.stumbleupon.com/submit?url=SHAREMESSAGE" title="Share on StumbleUpon" target="_blank" data-placement="top" class="btn btn-stumbleupon"><i class="fa fa-stumbleupon"></i> Stumbleupon</a>
-<!-- LinkedIn -->
-<a href="http://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=SHAREMESSAGE" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i> LinkedIn</a>
-         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 Company, Inc. 
+
+        <div class="share">
+          <h5>Please Share:
+          <button type="button" class="btn btn-fb"><a class="js-social-share facebook" href="https://www.facebook.com/sharer/sharer.php?u=<%= yield :url %>" target="_blank"><i class="fa fa-facebook left"></i> Facebook</a></button>
+          <button type="button" class="btn btn-fb"><a class="js-social-share twitter" href="https://twitter.com/intent/tweet?text=“<%= yield :title %>”&url=<%= yield :url %>&via=twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></button>
+          </h5>
+        </div>
+
+         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 Company, Inc.</p>
          <p class="pull-right"><a href="#">Back to top</a></p>
 
        </div>
