--- a/app/views/bl_comments/_bl_comment.html.erb
+++ b/app/views/bl_comments/_bl_comment.html.erb
@@ -6,9 +6,9 @@
     <p class="bl_comment_body">
       <%= bl_comment.body %>
     </p>
-    <p class="bl_comment_time">
-      <%= time_ago_in_words(bl_comment.created_at) %> Ago
-    </p>
+    <!-- <p class="bl_comment_time">
+      <%= time_ago_in_words(@bl_comment.created_at) %> Ago
+    </p> -->
 
   </div>
 
