--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
           </h5>
         </div>
 
-         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 Company, Inc.</p>
+         <p><img class="logo" src="<%= asset_path('logo.png') %>" alt="logo">&copy; 2016 ManishP.</p>
          <p class="pull-right"><a href="#">Back to top</a></p>
 
        </div>
