--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -12,6 +12,10 @@
       <p><span class="glyphicon glyphicon-map-marker"></span>Maryland, US</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Email: pradhanmanish33@gmail.com</p>
+
+      <a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+      <a class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
+
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -26,7 +30,7 @@
       <br>
       <div class="row">
         <div class="col-md-12 form-group">
-          <button type="submit">Send</button>
+          <button type="submit"><%= link_to 'Send', welcome_index_path %></button>
         </div>
       </div>
     </div>
